chore: update template

--- a/internal/adapters/outbound/templates/embed_repo/templates/basic/cmd/api/main.go.tmpl
+++ b/internal/adapters/outbound/templates/embed_repo/templates/basic/cmd/api/main.go.tmpl
@@ -1,7 +1,15 @@
 package main
 
-import "fmt"
+import (
+	"go.uber.org/fx"
+
+	"{{ .Module }}/internal/platform/di"
+)
 
 func main() {
-	fmt.Println("{{ .Project.Name }} API running")
+	app := fx.New(
+		di.Root(), // loads env, logger, core, adapters, transports
+	)
+
+	app.Run()
 }
