clean: clean base template

--- a/internal/adapters/outbound/templates/embed_repo/templates/basic/cmd/__name__/main.go.tmpl
+++ b/internal/adapters/outbound/templates/embed_repo/templates/basic/cmd/__name__/main.go.tmpl
@@ -2,14 +2,11 @@ package main
 
 import (
 	"go.uber.org/fx"
-
 	"{{ .Module }}/internal/platform/di"
 )
 
 func main() {
-	app := fx.New(
-		di.Root(), // loads env, logger, core, adapters, transports
-	)
-
-	app.Run()
+	fx.New(
+		di.Root(),
+	).Run()
 }
